# GameEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  Doxyfile  Doxyfile-mcss  README.md  action__manager_8cpp.html  action__manager_8h.html  annotated.html  application_8cpp.html  application_8h.html  asset__manager_8h.html  buffer__utils_8cpp.html  buffer__utils_8h.html  camera_8cpp.html  camera_8h.html  classengine_1_1ActionManager.html  classengine_1_1Application.html  classengine_1_1Engine.html  classengine_1_1InputManager.html  classengine_1_1Scene.html  classengine_1_1SceneManager.html  classengine_1_1Window.html  classengine_1_1ecs_1_1ComponentStorage.html  classengine_1_1ecs_1_1EntityManager.html  classengine_1_1ecs_1_1IComponentStorage.html  classengine_1_1ecs_1_1Registry.html  classengine_1_1graphics_1_1Camera.html  classengine_1_1graphics_1_1Font.html  classengine_1_1graphics_1_1PrimitiveRenderer.html  classengine_1_1graphics_1_1RenderQueue.html  classengine_1_1graphics_1_1Renderer.html  classengine_1_1graphics_1_1Shader.html  classengine_1_1graphics_1_1TextRenderer.html  classengine_1_1graphics_1_1Texture.html  classengine_1_1util_1_1AssetManager.html  (+64 more)
.github/workflows/: docs.yml
demos/: CMakeLists.txt
demos/actionmapping/: CMakeLists.txt  main.cpp
demos/aidemo/: CMakeLists.txt  main.cpp
demos/animatordemo/: CMakeLists.txt  main.cpp
demos/applicationdemo/: CMakeLists.txt  main.cpp
demos/assets/: platformer_level1.txt  platformer_level2.txt  platformer_level3.txt
demos/common/: CMakeLists.txt  demo_utils.cpp  demo_utils.h  menu_scene.cpp  menu_scene.h
demos/componentsdemo/: CMakeLists.txt  main.cpp
demos/consoledemo/: CMakeLists.txt  main.cpp
demos/ecs-notifications/: CMakeLists.txt  main.cpp
demos/ecsdemo/: CMakeLists.txt  main.cpp
demos/ecsnotifications/: CMakeLists.txt
demos/games/: CMakeLists.txt
demos/games/breakout/: CMakeLists.txt  components.h  gameplay_scene.cpp  gameplay_scene.h  main.cpp
demos/games/platformer/: CMakeLists.txt  components.h  gameplay_scene.cpp  level_complete_scene.cpp  level_loader.cpp  level_loader.h  main.cpp  menu_scene.cpp  scenes.h
demos/games/rpg/: CMakeLists.txt  game_state.h  main.cpp  map_generator.h  scenes.cpp  scenes.h
demos/games/tactical-rpg/: AGENTS.md  CMakeLists.txt  action_registry.cpp  action_registry.h  battle_grid.cpp  battle_grid.h  battle_scene.cpp  battle_scene.h  character_renderer.cpp  character_renderer.h  class_registry.cpp  class_registry.h  combat_rules.h  components.h  effect.cpp  effect.h  enemy_ai.cpp  enemy_ai.h  game_manager.cpp  game_manager.h  game_types.h  grid_renderer.cpp  grid_renderer.h  main.cpp  main_menu_scene.h  map_node.cpp  map_node.h  map_scene.h  map_system.h  result_scene.h  systems.cpp  systems.h  turn_manager.cpp  turn_manager.h
demos/games/tactical-rpg/classes/: bard.cpp  cleric.cpp  druid.cpp  fighter.cpp  monk.cpp  paladin.cpp  ranger.cpp  rogue.cpp  warlock.cpp  wizard.cpp
demos/games/tactical-rpg/components/: action_components.h  basic_components.h  grid_components.h  status_components.h
demos/games/tactical-rpg/systems/: combat_system.cpp  combat_system.h  sync_transform_system.cpp  sync_transform_system.h
demos/jobsystemdemo/: CMakeLists.txt  main.cpp
demos/lighting_demo/: CMakeLists.txt  main.cpp
demos/lightingdemo/: CMakeLists.txt  main.cpp
demos/luademo/: CMakeLists.txt  main.cpp
demos/newcomponentsdemo/: CMakeLists.txt  main.cpp
demos/post_effects/: CMakeLists.txt  main.cpp
demos/posteffects/: CMakeLists.txt  main.cpp
demos/rendererdemo/: CMakeLists.txt  main.cpp
demos/renderqueuedemo/: CMakeLists.txt  main.cpp
demos/scenedemo/: CMakeLists.txt  main.cpp
demos/shapedemo/: CMakeLists.txt  main.cpp
demos/spritesheetdemo/: CMakeLists.txt  main.cpp
demos/textdemo/: CMakeLists.txt  main.cpp
demos/tweendemo/: CMakeLists.txt  main.cpp
demos/ui_menu/: CMakeLists.txt  main.cpp
demos/uimenu/: main.cpp
demos/windowdemo/: CMakeLists.txt  (+1 more)
include/: application.h  engine.h  input_manager.h  scene.h  scene_manager.h  window.h
scripts/: validate.sh
src/: CMakeLists.txt  application.cpp  engine.cpp  input_manager.cpp  scene_manager.cpp  window.cpp
src/ecs/: entity_manager.cpp
src/engine/core/: application.cpp  engine.cpp  job_system.cpp  job_system_test.cpp  window.cpp
src/engine/ecs/: ai_system.cpp  ecs_bindings.cpp  entity_manager.cpp  entity_manager_test.cpp  registry_test.cpp  script_system.cpp
src/engine/ecs/systems/: ai_system.cpp  ai_system_test.cpp  camera_system.cpp  physics_system.cpp  script_system.cpp
src/engine/graphics/: buffer_utils.cpp  buffer_utils.h  camera.cpp  font.cpp  framebuffer.cpp  lighting_effect.cpp  lighting_system.cpp  particle_system.cpp  post_processor.cpp  primitive_renderer.cpp  primitive_renderer.h  renderer.cpp  shader.cpp  sprite_animator.cpp  sprite_render_system.cpp  sprite_sheet.cpp  text_renderer.cpp  texture.cpp  vertex2d.h
src/engine/graphics/ecs/: lighting_system.cpp  particle_system.cpp  sprite_animator.cpp  sprite_render_system.cpp  text_renderer.cpp
src/engine/graphics/shaders/: uber.frag  uber.vert
src/engine/graphics/utils/: particle_system.cpp  sprite_animator.cpp
src/engine/input/: action_manager.cpp  input_manager.cpp  input_manager_test.cpp
src/engine/physics/: physics_system.cpp
src/engine/scene/: scene_manager.cpp
src/engine/ui/: input_system.cpp  layout_system.cpp  render_system.cpp  sync_system.cpp  ui_systems.cpp
src/engine/util/: console.cpp  easing.cpp  easing_test.cpp  logger.cpp  performance_overlay.cpp  tween_manager.cpp
src/engine/util/scripting/: script_manager.cpp
src/game_engine/: engine.cpp  input_manager.cpp  window.cpp
src/graphics/: buffer_utils.cpp  buffer_utils.h  camera.cpp  font.cpp  primitive_renderer.cpp  primitive_renderer.h  renderer.cpp  shader.cpp  text_renderer.cpp  texture.cpp  vertex2d.h
src/leveleditor/: level_editor.cpp
src/tests/: test_ecs.cpp
src/tools/leveleditor/: component_registry.cpp  level_editor.cpp  main.cpp
src/util/: logger.cpp
(+170 files in other folders)
